# in-superstore

./: .gitignore  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
src/in_superstore/: Dashboard.py  __init__.py  read.py
src/in_superstore/dashboard/: __init__.py  app.py  clients.py  customers.py  other.py  products.py  sales.py  timeline.py  welcome.py
src/in_superstore/data_access/: __init__.py  geo.py  geographic.py  superstore.py
src/in_superstore/pages/: 1_Productos.py  2_Ventas.py
