[project]
name = "superstore"
version = "0.1.0"
description = "Business Intelligence project for a fictional superstore."
authors = [
  { name = "Pablo Sánchez Troncoso", email = "psantro@alu.upo.es" },
  { name = "Antonio Garrido Massé", email = "agarmas@alu.upo.es" }
]
requires-python = ">=3.13"
dependencies = [
  "dotenv",
  "numpy",
  "pandas",
  "scipy",
  "scikit-learn",
  "matplotlib",
  "seaborn",
  "great-tables",
  "streamlit>=1.36",
  "plotly"
]

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py313"
lint.select = ["ALL"]
lint.ignore = ["D"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[project.optional-dependencies]
dev = [
  "ruff",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
