[tool.poetry]
name = "superstore"
version = "0.1.0"
description = "Business Intelligence project for a fictional superstore."
authors = [
  "Pablo Sánchez Troncoso <psantro@alu.upo.es>",
  "Antonio Garrido Massé <agarmas@alu.upo.es>"
]
packages = [
  { include = "in_superstore", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.13"
numpy = "*"
pandas = "*"
scipy = "*"
scikit-learn = "*"
matplotlib = "*"
seaborn = "*"
great-tables = "*"
streamlit = ">=1.36"
plotly = "*"

[tool.poetry.dev-dependencies]
ruff = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
